<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_p2"
        tools:context=".LoginActivity">
    <LinearLayout android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:background="@drawable/back"
                  android:orientation="vertical"
                  android:layout_margin="10dp"
                  app:layout_constraintEnd_toEndOf="parent">
        <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:layout_margin="20dp"
                android:gravity="right"
                android:hint="@string/user_name_string"/>
        <AutoCompleteTextView android:id="@+id/passworduser"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="10dp"
                              android:layout_marginBottom="10dp"
                              android:layout_marginStart="20dp"
                              android:layout_marginEnd="20dp"
                              android:textColor="@color/white_p2"
                              android:shadowColor="@color/white_p2"
                              android:outlineAmbientShadowColor="@color/white_p2"
                              android:textColorHint="@color/white_p2"
                              android:textColorHighlight="@color/white_p2"
                              android:textColorLink="@color/white_p2"
                              android:outlineSpotShadowColor="@color/white_p2"
                              android:inputType="textPassword"
                              android:gravity="right"
                              android:hint="@string/password_string"/>
        <Button android:id="@+id/enterMainPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/text_login_size"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/text_button_color"
                android:background="@drawable/button_shape"
                android:text="@string/enter_string"
                android:layout_weight="1"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="60dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:gravity="center"
                      android:orientation="vertical">

            <TextView android:id="@+id/forgetPage"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white_p2"
                      android:textSize="@dimen/text_login_size"
                      android:textStyle="bold"
                      android:text="@string/forget_password_string"
            />
            <TextView
                    android:id="@+id/signupPage"
                    android:layout_width="wrap_content"
                      android:layout_margin="10dp"
                      android:layout_height="wrap_content"
                      android:text="@string/signup_string"
                      android:textSize="@dimen/text_login_size"
                    android:textStyle="bold"
                    android:textColor="@color/white_p2"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:id="@+id/progressLinnerLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/black_light_back"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent"
    >
        <!--<android.support.constraint.ConstraintLayout android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <LinearLayout android:layout_width="wrap_content"
                      android:gravity="center"
                      android:background="@drawable/progress_back"
                      android:padding="20dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:orientation="vertical">
            <ProgressBar android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textSize="@dimen/text_login_size"
                      android:textColor="#fff"
                      android:layout_height="wrap_content"
                      android:text="در حال دریافت اطلاعات..."/>
        </LinearLayout>
        <!--</android.support.constraint.ConstraintLayout>-->


    </LinearLayout>
    <Button
            android:textStyle="bold"
            android:text="کاربر"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"

            android:textColor="@color/white_p2"
            android:background="@color/gray_p"
            android:textSize="30dp"
            android:id="@+id/switch1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>
