<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@color/gray_p"
             tools:context=".EditUserFragment">
<LinearLayout android:layout_width="match_parent"
              android:layout_height="match_parent"
android:orientation="vertical">

    <LinearLayout android:id="@+id/linearEditing"
                android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <AutoCompleteTextView
                android:id="@+id/usernameUserPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/anyChartView"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:textSize="@dimen/text_login_size"
                android:gravity="right"
                android:hint="@string/user_name_string"/>
        <AutoCompleteTextView
                android:id="@+id/numberIdentificationUserPanel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/usernameUserPanel"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/text_login_size"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:inputType="number"
                android:gravity="right"
                android:hint="نام"/>
        <AutoCompleteTextView
                android:id="@+id/phoneNumberUserPanel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/numberIdentificationUserPanel"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/text_login_size"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:inputType="number"
                android:gravity="right"
                android:hint="@string/phone_number_string"/>
        <AutoCompleteTextView
                android:id="@+id/constPhoneNumberUserPanel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberUserPanel"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/text_login_size"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:inputType="number"
                android:gravity="right"
                android:hint="@string/const_phone_number_string"/>
        <AutoCompleteTextView
                android:id="@+id/passworduserUserPanel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/constPhoneNumberUserPanel"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/text_login_size"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="right"
                android:hint="@string/password_string"/>
        <AutoCompleteTextView
                android:id="@+id/repassworduserUserPanel"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/passworduserUserPanel"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textColor="@color/white_p2"
                android:shadowColor="@color/white_p2"
                android:outlineAmbientShadowColor="@color/white_p2"
                android:textColorHint="@color/white_p2"
                android:textColorHighlight="@color/white_p2"
                android:textColorLink="@color/white_p2"
                android:outlineSpotShadowColor="@color/white_p2"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/text_login_size"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="right"
                android:hint="@string/re_password_string"/>
    </LinearLayout>
    <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
    <Button android:id="@+id/accepteUserPanelButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:textColor="@color/text_button_color"
            android:textSize="@dimen/text_login_size"
            android:background="@drawable/button_shape"
            android:text="تایید و بازگشت"
            android:layout_height="wrap_content"/>
</LinearLayout>

</FrameLayout>